--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,16 @@ body{
 
 .editor-container.collapsed .CodeMirror-scroll{
   position: absolute;
+  overflow: hidden !important;
 }
 
+.expand-collapse-btn{
+  margin-left: .5rem;
+  background: none;
+  border:none;
+  color:white;
+  cursor: pointer;
+}
 
 .editor-title{
   display: flex;
